--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -1,9 +1,9 @@
 <div class="form">
 
  <%= form_with url: "/flights", method: :get do |form| %>
-  From:<%= form.select( :from_airport, Airport.all.map { |a| a.airport_code }, { include_blank: true }) %>
-  To:<%= form.select( :to_airport, Airport.all.map { |a| a.airport_code }, { include_blank: true }) %>
-  No. of tickets:<%= form.select( :ticket, (1..4).to_a ) %>
+  From:<%= form.select( :from_airport, Airport.all.map { |a| a.airport_code }) %>
+  To:<%= form.select( :to_airport, Airport.all.map { |a| a.airport_code }) %>
+  Passengers:<%= form.select( :passengers, (1..4).to_a ) %>
   Date:<%= form.select(:date, Flight.all.map { |a| a.schedule}.uniq ) %>
   <%= form.submit "Search" %>
  <% end %>
